仿微信实现视频录制完整功能

--- a/recordermanager/src/main/AndroidManifest.xml
+++ b/recordermanager/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mingyuechunqiu.recordermanager" />
+    package="com.mingyuechunqiu.recordermanager">
+
+</manifest>
