--- a/recordermanager/src/main/AndroidManifest.xml
+++ b/recordermanager/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mingyuechunqiu.recordermanager">
 
+    <application>
+        <activity android:name=".ui.activity.RecordVideoActivity" />
+    </application>
 </manifest>
