--- a/recordermanager/src/main/AndroidManifest.xml
+++ b/recordermanager/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
     package="com.mingyuechunqiu.recordermanager">
 
     <application>
-        <activity android:name=".ui.activity.RecordVideoActivity" />
+        <activity
+            android:name=".ui.activity.RecordVideoActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
